--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         const container = document.getElementById('comic-container');
         const status = document.getElementById('status');
-        const driveBaseUrl = "https://drive.google.com/uc?export=view&id=";
+        const driveBaseUrl = "https://lh3.googleusercontent.com/d/";
 
         async function loadChapter() {
             try {
